Final Deliverables/Final code/kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory

spec:
  replicas: 5
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory

    spec:
      containers:
        - name: invent-container
          image: inventory
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
              protocol: TCP
