Final Deliverables/Final code/kubernetes/ibm_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory

spec:
  replicas: 5
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory

    spec:
      containers:
        - name: invent-container
          image: jp.icr.io/invent-ns/invent-repo
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
